# split-schedule

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yaml  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: linting.yaml  testing.yaml
scripts/: lint.sh  test.sh
split_schedule/: __init__.py  errors.py  schedule_builder.py  schedule_types.py  set_schedule.py
tests/: conftest.py  helpers.py
tests/assets/: classes.xlsx
tests/integration/: test_schedule_builder.py  test_schedule_builder_integration.py  test_set_schedule.py  test_set_schedule_integration.py
tests/unit/: test_schedule_builder.py  test_schedule_bulder.py
