[tool.poetry]
name = "split-schedule"
version = "0.3.0"
description = "Split schedule into smaller class sizes"
authors = ["Paul Sanders <psanders1@gmail.com>"]
license = "MIT"
keywords = ["schools", "schedule"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"
openpyxl = "^3.0.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.7.0"
mypy = "^0.812"
pre-commit = "^2.10.1"
pytest = "^6.2.1"
pytest-cov = "^2.11.1"
tox = "^3.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | \venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)/
'''

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["split_schedule", "tests"]
